[tool.poetry]
name = "bitflow"
version = "0.5.0"
description = ""
authors = ["LSaldyt <lucassaldyt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
neo4j = "^4.0.0"
beautifulsoup4 = "^4.9.1"
urllib3 = "*"
requests = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
